mail/bulwark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bulwark-svc
  namespace: mail
  labels:
    app: bulwark
spec:
  selector:
    app: bulwark
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
